--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -1,5 +1,16 @@
 // Colors
-$clr1: #ce2e6c;
+$logo-clr: #0245d0;
+$main-bg-clr: #101010;
+$sec-bg-clr: #1f1f1f;
+$main-font-clr: #ffffff;
+$sec-font-clr: #a7a7a7;
+$secondary-main-clr: #282828;
+$search-bar-clr: #252525;
+
+
+
+
+$clr1: #4f3a65;
 $clr2: #4f3a65;
 $clr3: #574f7d;
 $clr4: #95adbe;
