update colors in scss

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -2,15 +2,11 @@
     box-sizing: border-box;
 }
 
-::selection {
-    background-color: $clr1;
-    color: $clr6;
-}
 
 html {
     font-family: montserrat;
     line-height: 1.6;
-    color: $clr2;
+    color: $main-font-clr;
 }
 
 body {
