--- a/src/assets/styles/cmps/AppFooter.scss
+++ b/src/assets/styles/cmps/AppFooter.scss
@@ -1,6 +1,6 @@
 .app-footer{
-    background-color: #111;
-    color: $clr4;
+    background-color:$main-bg-clr; 
+    color: $sec-font-clr;
     padding: 20px;
     margin: 10px;
     text-align: center;
