--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -1,37 +1,10 @@
 .app-header {
-    background-color: $clr4;
+    background-color: $sec-font-clr;
     padding: 10px;
 
 
-    .user-info {
-        // background-color: $clr2;
-        // padding: 2px 8px;
-        padding-left: 100px;
-        color: $clr1;
-
-        .score {
-            background-color: $clr2;
-            color: $clr6;
-            padding: 8px;
-            margin: 10px;
-            border-radius: 50%;
-        }
-
-        img {
-            width: 32px;
-            height: 32px;
-            border-radius: 50%;
-            object-fit: cover;
-        }
-    }
-
-    .user-info .btn-link {
-        color: $clr2;
-    }
-
     nav {
         font-size: .8em;
-        background-color: $clr5;
         padding: 5px;
 
     }
@@ -41,13 +14,13 @@
     }
 
     nav a:not(:first-child) {
-        border-top: 1px solid $clr1;
+        border-top: 1px solid $sec-font-clr;
         padding: 0 5px;
         margin: 10px;
     }
 
     nav .active {
-        color: $clr1;
+        color: $sec-font-clr;
     }
 
 }
