--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -14,6 +14,7 @@ body {
     margin: 0;
     max-width: 1024px;
     margin: auto;
+    background-color: $main-bg-clr;
 }
 
 h1, h2, h3, h4, h5, h6 {
