--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -15,10 +15,11 @@ body {
     max-width: 1024px;
     margin: auto;
     background-color: $main-bg-clr;
+    font-family: montserrat;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: caveat;
+
     margin: 0 0 0.6em;
     line-height: 1;
 }
