--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -1,8 +1,13 @@
+// @font-face {
+//     font-family: 'MyFont';
+//     src: url('path/to/MyFont.otf') format('opentype');
+//     font-weight: normal;
+//     font-style: normal;
+// }
+
 @font-face {
-    // font-family: caveat;
-    // src: url(../../fonts/Caveat/Caveat-Regular.ttf);
-}
-@font-face {
-    // font-family: montserrat;
-    // src: url(../../fonts/Montserrat/Montserrat-Regular.ttf);
+    font-family: 'CircularSpotifyText';
+    src: url('../../fonts/CircularSpotifyText-Black.otf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
