--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -1,32 +1,33 @@
-.main-container {
+.page-container {
     display: grid;
-    grid-template-columns: 20px 1fr 20px;
-
-    > * {
-        grid-column: 2;
-
-        &.full {
-            grid-column: 1 /-1;
-        }
+    grid-template-columns: 1fr;
+    grid-template-rows:1fr auto  auto  ;
+    width:100vw;
+    height:100vh;
+    .app-footer{
+        grid-row: 2;
+    }
+    .side-pop-up{
+        display: none;
     }
 
-    @include for-narrow-layout {
-        grid-template-columns: 
-            minmax(20px, 1fr)
-            minmax(auto, $mobile-breakpoint)
-            minmax(20px, 1fr);
-    }
+
     @include for-normal-layout {
-        grid-template-columns: 
-            minmax(20px, 1fr)
-            minmax(auto, $narrow-breakpoint)
-            minmax(20px, 1fr);
-    }
-    @include for-wide-layout {
-        grid-template-columns: 
-            minmax(20px, 1fr)
-            minmax(auto, $normal-breakpoint)
-            minmax(20px, 1fr);
-    }
-}
+      grid-template-columns: auto 1fr;
+        grid-template-rows: 1fr auto;
+        .app-footer{
+            grid-row: 2;
+            grid-column: 1 / -1;
+        }
+        .Nav-bar{
+            grid-row: 1;
+            grid-column: 1 ;
+        }
+        .main-container{
+            grid-row: 1;
+            grid-column: 2;
+        }
 
+    }
+
+}
