created station list and create style for library

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -45,7 +45,7 @@
 @import 'cmps/NavBar';
 @import 'cmps/NavOptions';
 @import 'cmps/MinimalSong';
-@import 'cmps/ListOfStations';
+@import 'cmps/StationList';
 @import 'cmps/Library';
 @import 'cmps/ImgUploader';
 @import 'cmps/GenrePreview';
@@ -53,6 +53,3 @@
 @import 'cmps/FullScreenPlayer';
 @import 'cmps/FullPlayer';
 @import 'cmps/Catalog';
-
-
-
