--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -7,7 +7,7 @@ $sec-font-clr: #a7a7a7;
 $secondary-main-clr: #282828;
 $search-bar-clr: #252525;
 
-
+$station-img-border-radius : 20%;
 
 // Breakpoints
 $mobile-breakpoint: 460px;
