Implement station page and layout

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -48,7 +48,10 @@ p {
 }
 
 a {
-    //text-decoration: none;
+    text-decoration: unset;
+    color: unset;
+    cursor: pointer;
+
 }
 
 a:hover {
