--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -2,6 +2,10 @@
     background-color: $sec-font-clr;
     padding: 10px;
 
+    input {
+        display: none;
+    }
+
 
     nav {
         font-size: .8em;
