--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -4,11 +4,35 @@
   grid-template-rows: 1fr auto auto;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
+  padding-top: rem(5px);
+
+  //all the children of the page-container
+  > * {
+    border-radius: rem(5px);
+  }
+
+  .main-container {
+    overflow-y: scroll;
+    margin-right: rem(5px);
+  }
 
   .app-footer {
+    border-radius: 0;
     position: sticky;
     bottom: 0; /* Stick to the bottom of the viewport */
     z-index: 1; /* Ensure footer stays above other content */
+    padding: 0;
+    // max-height: rem(100px);
+  }
+  .nav-bar {
+    position: sticky;
+    top: 0; /* Stick to the top of the viewport */
+    left: 0; /* Stick to the left of the viewport */
+    z-index: 1; /* Ensure nav-bar stays above other content */
+    overflow: scroll;
+    margin-left: rem(5px);
+    margin-right: rem(5px);
   }
   .side-pop-up {
     display: none;
@@ -20,14 +44,17 @@
     .app-footer {
       grid-row: 2;
       grid-column: 1 / -1;
+      background-color: green;
     }
     .nav-bar {
       grid-row: 1;
       grid-column: 1;
+      background-color: red;
     }
     .main-container {
       grid-row: 1;
       grid-column: 2;
+      background-color: blue;
     }
   }
 }
