Nav Bar is expandable by drag left or right

--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -33,6 +33,8 @@
     overflow: scroll;
     margin-left: rem(5px);
     margin-right: rem(5px);
+    resize: horizontal;
+    overflow: auto;
   }
   .side-pop-up {
     display: none;
