--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -10,6 +10,7 @@
   //all the children of the page-container
   > * {
     border-radius: rem(5px);
+    background-color: $sec-bg-clr;
   }
 
   .main-container {
@@ -23,6 +24,7 @@
     bottom: 0; /* Stick to the bottom of the viewport */
     z-index: 1; /* Ensure footer stays above other content */
     padding: 0;
+
     // max-height: rem(100px);
   }
   .nav-bar {
@@ -46,17 +48,14 @@
     .app-footer {
       grid-row: 2;
       grid-column: 1 / -1;
-      background-color: green;
     }
     .nav-bar {
       grid-row: 1;
       grid-column: 1;
-      background-color: red;
     }
     .main-container {
       grid-row: 1;
       grid-column: 2;
-      background-color: blue;
     }
   }
 }
