--- a/src/assets/styles/cmps/PlayerActions.scss
+++ b/src/assets/styles/cmps/PlayerActions.scss
@@ -1,9 +1,9 @@
-.playerActions {
-
-    svg {
-        fill: $sec-font-clr;
-        height: em(16px);
-        width: em(16px);
-        cursor: pointer;
-    }
+.player-actions {
+  margin: em(35px);
+  svg {
+    fill: $sec-font-clr;
+    height: em(16px);
+    width: em(16px);
+    cursor: pointer;
+  }
 }
