--- a/src/assets/styles/views/SearchPage.scss
+++ b/src/assets/styles/views/SearchPage.scss
@@ -1,9 +1,10 @@
 .search-page {
+  display: flex;
+  flex-direction: column;
 
-    .app-header {
-        input {
-            display: block;
-        }
+  .app-header {
+    input {
+      display: block;
     }
-
+  }
 }
