--- a/src/assets/styles/cmps/SongResults.scss
+++ b/src/assets/styles/cmps/SongResults.scss
@@ -1,1 +1,36 @@
-
+.song-results {
+  display: flex;
+  flex-direction: column;
+  .song-result {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    border-radius: em(10px);
+    &:hover {
+      background-color: #242424;
+    }
+    .song-info {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: start;
+      .song-title {
+        font-size: 1.2em;
+        font-weight: bold;
+      }
+      .song-artist {
+        font-size: 1em;
+        font-weight: bold;
+      }
+    }
+    img {
+      width: 100%;
+      height: 100%;
+      width: em(50px);
+      height: em(50px);
+      border-radius: em(5px);
+    }
+  }
+}
