--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -6,8 +6,6 @@
 // }
 
 @font-face {
-    font-family: 'CircularSpotifyText';
-    src: url('../../fonts/CircularSpotifyText-Black.otf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+  font-family: "CircularSpotifyText";
+  src: url("../fonts/CircularSpotifyText-Bold.otf") format("opentype");
 }
