--- a/src/assets/styles/cmps/AppFooter.scss
+++ b/src/assets/styles/cmps/AppFooter.scss
@@ -2,51 +2,57 @@
   background-color: $main-bg-clr;
   color: $sec-font-clr;
   grid-row: -1;
-  max-height: rem(150px);
-  .full-player {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    padding: em(10px);
-    margin: em(10px);
-    .minimal-song {
-      grid-column: 1;
-      .song-details {
-        position: relative;
-        display: flex;
-        justify-content: flex-start;
-        gap: 10px;
-        a {
-          font-size: unset;
-          font-family: unset;
-          color: unset;
-        }
-        p {
-          letter-spacing: -0.08rem;
-          font-size: rem(13px);
-          color: $sec-font-clr;
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
-        }
-        .artist-img {
-          width: em(100px);
-          height: em(100px);
+}
 
-          img {
-            height: 100%;
-            width: 100%;
-            object-fit: cover;
-            object-position: center center;
+@include for-normal-layout {
+  .app-footer {
+    .full-player {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: 1fr;
+      padding: em(5px);
+      margin: em(10px);
+      gap: em(7px);
+
+      .minimal-song {
+        grid-column: 1;
+        .song-details {
+          position: relative;
+          display: flex;
+          justify-content: flex-start;
+          gap: 10px;
+          a {
+            font-size: unset;
+            font-family: unset;
+            color: unset;
+          }
+          p {
+            font-size: rem(13px);
+            color: $sec-font-clr;
+            overflow: hidden;
+            text-wrap: pretty;
+          }
+          .artist-img {
+            width: em(100px);
+            height: em(100px);
+            min-width: em(100px);
+            min-height: em(100px);
+
+            img {
+              height: 100%;
+              width: 100%;
+              object-fit: cover;
+              object-position: center center;
+            }
           }
         }
       }
-    }
-    .player {
-      grid-column: 2;
-    }
-    .player-actions {
-      grid-column: 3;
+      .player {
+        grid-column: 2;
+      }
+      .player-actions {
+        grid-column: 3;
+      }
     }
   }
 }
