add stations to song to display

--- a/src/assets/styles/views/SearchPage.scss
+++ b/src/assets/styles/views/SearchPage.scss
@@ -1,8 +1,10 @@
 .search-page {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 
   .app-header {
+    position: relative;
     input {
       display: block;
     }
