--- a/src/assets/styles/views/SearchPage.scss
+++ b/src/assets/styles/views/SearchPage.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
 
   .app-header {
-    position: relative;
+    top: 0;
     input {
       display: block;
     }
