station page style

--- a/src/assets/styles/cmps/SongResults.scss
+++ b/src/assets/styles/cmps/SongResults.scss
@@ -1,6 +1,8 @@
 .song-results {
   display: flex;
   flex-direction: column;
+  box-shadow: em(10px) em(10px) em(10px) em(10px) rgba(0, 0, 0, 0.5);
+
   .song-result {
     display: flex;
     flex-direction: row;
@@ -11,10 +13,25 @@
     &:hover {
       background-color: #242424;
     }
+    .song-details {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      .song-title {
+        font-size: 1.2em;
+        font-weight: bold;
+      }
+      .song-artist {
+        font-size: 1em;
+        font-weight: bold;
+      }
+    }
+
     .song-info {
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: space-evenly;
       align-items: start;
       .song-title {
         font-size: 1.2em;
@@ -25,12 +42,67 @@
         font-weight: bold;
       }
     }
-    img {
-      width: 100%;
-      height: 100%;
+    .artist-img {
+      position: relative; // Ensure positioning context for absolute positioning of play button
       width: em(50px);
       height: em(50px);
       border-radius: em(5px);
+      overflow: hidden; // Ensure the play button doesn't overflow the image wrapper
+      img {
+        width: 100%;
+        height: 100%;
+        border-radius: em(5px);
+      }
+      .play-btn {
+        position: absolute; // Position the play button absolutely within the image wrapper
+        top: 0; // Align play button to the top of the image
+        left: 0; // Align play button to the left of the image
+        width: 100%; // Make the play button same width as the image
+        height: 100%; // Make the play button same height as the image
+        background-color: rgba(
+          0,
+          0,
+          0,
+          0.5
+        ); // Transparent black background color
+        display: none; // Ensure the play button content aligns properly
+        justify-content: center; // Center play button content horizontally
+        align-items: center; // Center play button content vertically
+        svg {
+          fill: white; // White color for the play icon
+          width: em(20px);
+          height: em(20px);
+        }
+      }
+    }
+    .song-actions {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+
+      min-width: em(100px);
+      button {
+        display: none;
+        border-radius: 50%;
+        background-color: inherit;
+        //border line
+        border: rem(1px) solid $sec-font-clr;
+        padding: em(5px);
+        svg {
+          fill: $sec-font-clr;
+          width: em(20px);
+          height: em(20px);
+        }
+      }
+    }
+    //hover effect
+    &:hover {
+      .song-actions button {
+        display: block;
+      }
+      .artist-img .play-btn {
+        display: flex; // Display play button on hover
+      }
     }
   }
 }
