--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -4,14 +4,10 @@
   grid-template-rows: 1fr auto auto;
   width: 100vw;
   height: 100vh;
+  max-width: 100vw;
+  max-height: 100vh;
   overflow: hidden;
   padding-top: rem(5px);
-
-  //all the children of the page-container
-  > * {
-    border-radius: rem(5px);
-    background-color: $sec-bg-clr;
-  }
 
   .main-container {
     overflow-y: scroll;
@@ -19,26 +15,22 @@
     padding-bottom: rem(5px);
     padding-right: rem(5px);
     padding-left: rem(5px);
+    background-color: $sec-bg-clr;
+    border-radius: rem(5px);
   }
 
   .app-footer {
-    border-radius: 0;
     position: sticky;
     bottom: 0; /* Stick to the bottom of the viewport */
     z-index: 1; /* Ensure footer stays above other content */
     padding: 0;
-
-    // max-height: rem(100px);
+    grid-row: 2;
   }
   .nav-bar {
-    position: sticky;
-    top: 0; /* Stick to the top of the viewport */
-    left: 0; /* Stick to the left of the viewport */
+    grid-row: 3;
+    grid-column: 1;
+
     z-index: 1; /* Ensure nav-bar stays above other content */
-    overflow: scroll;
-    margin-left: rem(5px);
-    margin-right: rem(5px);
-    background-color: $main-bg-clr;
   }
   .side-pop-up {
     display: none;
@@ -55,7 +47,10 @@
       grid-row: 1;
       grid-column: 1;
       resize: horizontal;
-      overflow: auto;
+      overflow-y: auto;
+      position: sticky;
+      top: 0; /* Stick to the top of the viewport */
+      left: 0; /* Stick to the left of the viewport */
     }
     .main-container {
       grid-row: 1;
