--- a/src/assets/styles/cmps/NavBar.scss
+++ b/src/assets/styles/cmps/NavBar.scss
@@ -3,21 +3,41 @@
   flex-direction: column;
   gap: em(5px);
   min-width: em(75px);
+  overflow: scroll;
+  margin-left: rem(5px);
+  margin-right: rem(5px);
+  .nav-options {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    .to-library {
+      display: block;
+    }
+  }
 
   //all the children of the nav-bar border-radius
   > * {
     border-radius: em(5px);
     background-color: $sec-bg-clr;
   }
-  .nav-options {
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column;
-    min-height: em(200px);
-  }
+
   .library-container {
     width: 100%;
     height: 100%;
     padding: em(10px);
+  }
+}
+
+@include for-normal-layout {
+  .nav-bar {
+    .nav-options {
+      display: flex;
+      justify-content: space-evenly;
+      flex-direction: column;
+      min-height: em(200px);
+      .to-library {
+        display: none;
+      }
+    }
   }
 }
