--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -1,13 +1,13 @@
 // Colors
 $logo-clr: #0245d0;
 $main-bg-clr: #000000;
-$sec-bg-clr: #1f1f1f;
+$sec-bg-clr: #121212;
 $main-font-clr: #ffffff;
 $sec-font-clr: #a7a7a7;
 $secondary-main-clr: #282828;
 $search-bar-clr: #252525;
 
-$station-img-border-radius : 20%;
+$station-img-border-radius: 20%;
 
 // Breakpoints
 $mobile-breakpoint: 460px;
