--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -8,6 +8,7 @@
   max-height: 100vh;
   overflow: hidden;
   padding-top: rem(5px);
+  position: relative;
 
   .main-container {
     overflow-y: scroll;
