--- a/src/assets/styles/cmps/SongDetails.scss
+++ b/src/assets/styles/cmps/SongDetails.scss
@@ -15,7 +15,7 @@
     overflow: hidden;
     text-wrap: pretty;
   }
-  .artist-img {
+  .song-img {
     width: em(100px);
     height: em(100px);
     min-width: em(100px);
@@ -47,7 +47,7 @@
       overflow: hidden;
       text-wrap: pretty;
     }
-    .artist-img {
+    .song-img {
       width: em(100px);
       height: em(100px);
       min-width: em(100px);
