--- a/src/assets/styles/cmps/SongList.scss
+++ b/src/assets/styles/cmps/SongList.scss
@@ -14,7 +14,7 @@
     &:hover {
       background-color: #242424;
       .song-details {
-        .artist-img {
+        .song-img {
           .play-btn {
             display: flex;
           }
@@ -35,7 +35,7 @@
         font-size: 1em;
         font-weight: bold;
       }
-      .artist-img {
+      .song-img {
         position: relative;
         width: 50px;
         height: 50px;
@@ -63,9 +63,6 @@
           }
         }
       }
-    }
-    // hover effect
-    &:hover {
     }
   }
 }
