--- a/src/assets/styles/cmps/SongDetails.scss
+++ b/src/assets/styles/cmps/SongDetails.scss
@@ -34,6 +34,7 @@
     position: relative;
     display: flex;
     justify-content: flex-start;
+    align-items: center;
     gap: 10px;
 
     a {
