--- a/src/assets/styles/cmps/SongResults.scss
+++ b/src/assets/styles/cmps/SongResults.scss
@@ -8,7 +8,10 @@
   justify-content: space-between;
   gap: 0px;
   .song-header {
-    flex: 1;
+    margin: 0;
+    h1 {
+      margin: 0 0 0 0;
+    }
   }
 
   .song-result {
