--- a/src/assets/styles/cmps/SongResults.scss
+++ b/src/assets/styles/cmps/SongResults.scss
@@ -8,9 +8,9 @@
   justify-content: space-between;
   gap: 0px;
   .song-header {
-    margin: 0;
     h1 {
-      margin: 0 0 0 0;
+      margin-top: 0;
+      margin-bottom: 0;
     }
   }
 
@@ -98,15 +98,18 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      align-items: flex-start;
-
+      align-items: start;
       gap: 2px;
+      overflow: hidden;
       p {
         font-size: 1rem;
         font-weight: bold;
         font-weight: 400;
-        text-wrap: nowrap;
+        white-space: nowrap;
         overflow: hidden;
+        text-overflow: ellipsis;
+        width: 90%; /* Adjust the width as needed */
+
         &:hover {
           text-decoration: underline;
           cursor: pointer;
@@ -152,6 +155,14 @@
     svg {
       fill: $sec-font-clr;
       cursor: pointer;
+    }
+    .added {
+      svg {
+        fill: $logo-clr;
+        &:hover {
+          fill: $logo-clr;
+        }
+      }
     }
   }
   background-color: #656465;
