--- a/src/assets/styles/cmps/SearchResults.scss
+++ b/src/assets/styles/cmps/SearchResults.scss
@@ -1,19 +1,58 @@
+// (
+// <section className="search-results">
+// <div className="top-song-result">
+//   <h1>Top result</h1>
+//   <div className="top-song-details">
+//     {songResults && songResults.length > 0 && (
+//       <>
+//         <div className="song-img">
+//           <img src={songResults[0].img} alt="song-thumbnail" />
+//         </div>
+//         <div className="song-info">
+//           <p>{songResults[0].name}</p>
+//           <small>{songResults[0].artist}</small>
+//         </div>
+//         <button
+//           onClick={() => onPlaySong(songResults[0])}
+//           className="play-btn"
+//         >
+//           <ReactSVG
+//             src={
+//               isPlaying && currentSong.id === songResults[0].id
+//                 ? pauseIcon
+//                 : playIcon
+//             }
+//           />
+//         </button>
+//       </>
+//     )}
+//   </div>
+// </div>
+// <SongResults songResults={songResults} />
+// <StationResults stationResults={stationResults} />
+// </section>
+// );
+
 //for mobile layout
 .search-results {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 20px;
 }
 
 @include for-normal-layout {
   .search-results {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    grid-template-rows: auto 1fr;
+    grid-template-rows: auto auto 1fr;
+    gap: em(10px);
+    //set to start from top of the cell
 
-    gap: 20px;
+    .artist-results {
+      grid-row: 2;
+      grid-column: 1 / -1;
+    }
 
     .top-song-result {
       grid-row: 1;
@@ -46,7 +85,58 @@
             align-items: center;
             justify-content: center;
           }
-        } /* Add this line to enable absolute positioning for the play button */
+        }
+
+        .song-img {
+          position: relative;
+          width: em(100px);
+          height: em(100px);
+          border-radius: em(8px);
+          overflow: hidden;
+          img {
+            width: 100%;
+            height: 100%;
+            border-radius: em(8px);
+          }
+        }
+        .song-info {
+          display: flex;
+          flex-direction: column;
+          gap: em(5px);
+          flex-wrap: nowrap;
+
+          p {
+            margin: 0;
+            font-size: 2rem;
+            font-weight: 700;
+            white-space: nowrap; /* Ensure the text stays on one line */
+            overflow: hidden; /* Hide the overflow text */
+            text-overflow: ellipsis; /* Display an ellipsis for overflow text */
+            max-width: calc(
+              100%
+            ); /* Adjust the max width to accommodate the play button */
+          }
+
+          small {
+            font-size: em(14px);
+            .type {
+              color: $sec-font-clr;
+              font-weight: 400;
+              &::after {
+                content: "•";
+                //set size of the dot
+                font-size: 0.5rem;
+                margin-left: 0.2rem;
+                margin-right: 0.2rem;
+              }
+            }
+            &:hover {
+              .artist {
+                text-decoration: underline;
+              }
+            }
+          }
+        }
       }
 
       .play-btn {
@@ -72,7 +162,9 @@
     }
 
     .station-results {
-      grid-row: 2;
+      padding: 0;
+      margin: 0;
+      grid-row: 3;
       grid-column: 1 / -1;
     }
   }
